# llm-harness-core

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/coding-agent/: Cargo.toml
crates/coding-agent/src/: agent.rs  lib.rs  prompt.rs  settings.rs
crates/coding-agent/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
crates/llm-harness/: Cargo.toml
crates/llm-harness-loop/: Cargo.toml
crates/llm-harness-loop/src/: config.rs  convert.rs  dispatch.rs  hooked_tool.rs  lib.rs  loop_fn.rs  stream_state.rs  test_utils.rs  type_bridge.rs
crates/llm-harness-types/: Cargo.toml
crates/llm-harness-types/src/: compaction.rs  content.rs  env.rs  errors.rs  events.rs  hooks.rs  identity.rs  lib.rs  messages.rs  misc.rs  resources.rs  tool.rs
crates/llm-harness/examples/: deepseek_agent.md  deepseek_agent.rs
crates/llm-harness/src/: agent.rs  compaction.rs  env.rs  harness.rs  lib.rs  skills.rs
crates/llm-harness/src/session/: jsonl.rs  mod.rs  repo.rs  session.rs  storage.rs  types.rs
crates/llm-harness/tests/: harness_integration.rs
docs/review/: 2026-06-11-compaction-review.md  2026-06-11-llm-harness-crate-review.md  2026-06-11-llm-harness-loop-crate-review.md
docs/sdk/: README.md  agent-harness.md  concepts.md  core-runtime-boundary.md  hooks.md  quick-start.md  session-model.md  tool-authoring.md
docs/superpowers/plans/: 2026-06-07-phase1-types.md  2026-06-07-phase2-loop.md  2026-06-10-core-sdk-boundary.md  2026-06-11-harness-crate-review-fixes.md  from-framework-to-coding-agent.md  shared-agent-runtime-layer.md
docs/superpowers/specs/: 2026-06-07-llm-harness-core-design-phase1-types.md  2026-06-07-llm-harness-core-design-phase2-loop.md  2026-06-07-llm-harness-core-design-phase3-agent.md  2026-06-07-llm-harness-core-design-phase4-session.md  2026-06-07-llm-harness-core-design-phase5-compaction.md  2026-06-07-llm-harness-core-design-phase6-skills.md  2026-06-07-llm-harness-core-design-phase7-agent-harness.md  2026-06-07-llm-harness-core-design-review.md  2026-06-07-llm-harness-core-design.md  2026-06-07-llm-harness-core-gap-analysis.md  2026-06-07-llm-harness-core-module-boundary-review.md  2026-06-07-llm-harness-core-self-consistency-review.md  2026-06-10-core-runtime-sdk-boundary-design.md
examples/: README.md
examples/deepseek-agent/: Cargo.toml  README.md
examples/deepseek-agent/src/: main.rs
