[workspace]
members = ["crates/llm-harness-types"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
futures    = "0.3"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid       = { version = "1", features = ["v7", "serde"] }
