[workspace]
members = ["crates/llm-harness-types", "crates/llm-harness-loop", "crates/llm-harness"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow     = "1"
async-stream = "0.3"
async-trait  = "0.1"
chrono     = { version = "0.4", features = ["serde"] }
futures    = "0.3"
globset    = "0.4"
ignore     = "0.4"
llm_adapter = { git = "https://github.com/oh-my-harness/llm-api-adapter.git", rev = "c1d2cb87cb2bb94803144cfc28133a394b7fca18" }
llm-harness-types = { path = "crates/llm-harness-types" }
llm-harness-loop  = { path = "crates/llm-harness-loop" }
regex      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
uuid       = { version = "1", features = ["v7", "serde"] }
tempfile   = "3"
