[package]
name    = "llm-harness-loop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
llm-harness-types.workspace = true
llm_adapter.workspace       = true
async-stream.workspace      = true
async-trait.workspace       = true
futures.workspace           = true
serde_json.workspace        = true
tokio.workspace             = true
tokio-stream.workspace      = true
tokio-util.workspace        = true
uuid.workspace              = true
chrono.workspace            = true

[features]
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
