[package]
name    = "llm-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
llm-harness-types.workspace = true
llm-harness-loop.workspace  = true
anyhow.workspace            = true
chrono.workspace            = true
futures.workspace           = true
serde.workspace             = true
serde_json.workspace        = true
tokio     = { workspace = true, features = ["full"] }
tokio-util.workspace        = true

uuid.workspace              = true

[features]
test-utils = ["llm-harness-loop/test-utils"]

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
